--- a/jupyter_notebooks/plots.ipynb
+++ b/jupyter_notebooks/plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -579,18 +579,53 @@
       "29  /lustre/pd01/plgrid/plgllmefficont2/nano/conte...  \n",
       "30  /lustre/pd01/plgrid/plgllmefficont2/nano/conte...  \n",
       "31  /lustre/pd01/plgrid/plgllmefficont2/nano/conte...  \n",
-      "32  /lustre/pd01/plgrid/plgllmefficont2/nano/conte...  \n"
+      "32  /lustre/pd01/plgrid/plgllmefficont2/nano/conte...  \n",
+      "0     LLMRANDOM-42561\n",
+      "1     LLMRANDOM-41946\n",
+      "2     LLMRANDOM-41945\n",
+      "3     LLMRANDOM-41944\n",
+      "4     LLMRANDOM-41943\n",
+      "5     LLMRANDOM-41942\n",
+      "6     LLMRANDOM-41941\n",
+      "7     LLMRANDOM-41938\n",
+      "8     LLMRANDOM-41930\n",
+      "9     LLMRANDOM-41907\n",
+      "10    LLMRANDOM-41906\n",
+      "11    LLMRANDOM-41899\n",
+      "12    LLMRANDOM-41898\n",
+      "13    LLMRANDOM-41897\n",
+      "14    LLMRANDOM-41896\n",
+      "15    LLMRANDOM-41895\n",
+      "16    LLMRANDOM-41894\n",
+      "17    LLMRANDOM-41893\n",
+      "18    LLMRANDOM-41892\n",
+      "19    LLMRANDOM-41885\n",
+      "20    LLMRANDOM-41884\n",
+      "21    LLMRANDOM-41882\n",
+      "22    LLMRANDOM-41816\n",
+      "23    LLMRANDOM-41815\n",
+      "24    LLMRANDOM-41814\n",
+      "25    LLMRANDOM-41813\n",
+      "26    LLMRANDOM-41812\n",
+      "27    LLMRANDOM-41811\n",
+      "28    LLMRANDOM-41810\n",
+      "29    LLMRANDOM-41809\n",
+      "30    LLMRANDOM-41808\n",
+      "31    LLMRANDOM-41807\n",
+      "32    LLMRANDOM-41806\n",
+      "Name: sys/id, dtype: object\n"
      ]
     }
    ],
    "source": [
     "print(df[[\"job_config/common/dff\", \"job_config/common/kv_heads\", \"job/full_save_checkpoints_path\"]])\n",
-    "grid_params = [\"job_config/common/dff\", \"job_config/common/kv_heads\"]"
+    "grid_params = [\"job_config/common/dff\", \"job_config/common/kv_heads\"]\n",
+    "print(df['sys/id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +886,7 @@
      "evalue": "invalid decimal literal (2268491562.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[38]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m--tags context_scaling 42B \\\u001b[39m\n                            ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid decimal literal\n"
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m--tags context_scaling 42B \\\u001b[39m\n                            ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid decimal literal\n"
      ]
     }
    ],
